Fix canvas page overflow

--- a/Paint/wwwroot/css/canvas.css
+++ b/Paint/wwwroot/css/canvas.css
@@ -2,12 +2,18 @@
     box-sizing: border-box;
 }
 
+/* Prevent global style.css changes from causing overflows */
+html {
+    font-size: 100%;
+    zoom: 1;
+}
+
 .paint-app {
     display: flex;
     flex-direction: column;
 
     /* Not a big fan of this line, but right now I have no better ideas: */
-    height: calc(100vh - 54px); /* 54px - navbar height */
+    height: calc(100vh - 37px); /* 37px - navbar height */
 
     width: 100%;
     background-color: #c0c0c0;
@@ -102,6 +108,8 @@
     cursor: crosshair;
     margin: auto;
     image-rendering: pixelated;
+    width: 100%;
+    height: 100%;
 }
 
 /* =================================== BOTTOM =================================== */
